--- a/index.html
+++ b/index.html
@@ -14,7 +14,32 @@
 
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6 col-md-3">
+                    Start bootstrap
+                </div>
+                <div class="col-6 col-md-9">
+                    <div class="menu-burger d-md-none text-end">
+                        <i class="fas fa-bars"></i>
+                    </div>
+                    <div class="menu-list d-none d-md-block text-end">
+                        <ul>
+                            <li>Portfolio</li>
+                            <li>About</li>
+                            <li>Contact</li>
+                        </ul>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </header>
+    <section class="jumbotron">
+
+
+    </section>
     <main></main>
     <footer></footer>
 </body>
