--- a/index.html
+++ b/index.html
@@ -36,11 +36,41 @@
             </div>
         </div>
     </header>
-    <section class="jumbotron">
+    <main>
+        <section class="jumbotron">
+            <div class="container-fluid">
+               <div class="row text-center">
+                   <div class="col-12">
+                       <div class="avatar-wrapper">
+                           <img src="img/avatar.svg" alt="">
+                        </div>
+                   </div>
+                   <div class="col-12">
+                       <h1>Title</h1>
+                   </div>
+                   <div class="col-12">
+                       <hr>
+                   </div>
+                   <div class="col-12">
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                   </div>
+               </div> 
+            </div>
+        </section>
+        <section class="Portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12">
+                        <h1>Portfolio</h1>
+                        <hr>
+                    </div>
 
+                </div>
+            </div>
 
-    </section>
-    <main></main>
+        </section>
+
+    </main>
     <footer></footer>
 </body>
 </html>
