add portfolio section

--- a/index.html
+++ b/index.html
@@ -59,14 +59,47 @@
         </section>
         <section class="Portfolio">
             <div class="container">
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-12">
                         <h1>Portfolio</h1>
                         <hr>
                     </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="img-wrapper">
+                            <img src="img/cabin.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="img-wrapper">
+                            <img src="img/cake.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="img-wrapper">
+                            <img src="img/circus.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="img-wrapper">
+                            <img src="img/game.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="img-wrapper">
+                            <img src="img/safe.png" alt="">
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="img-wrapper">
+                            <img src="img/submarine.png" alt="">
+                        </div>
+                    </div>
 
                 </div>
             </div>
+
+        </section>
+        <section class="about">
 
         </section>
 
