--- a/index.html
+++ b/index.html
@@ -99,7 +99,29 @@
             </div>
 
         </section>
-        <section class="about">
+        <section class="about mt-2 text-center">
+            <div class="container-fluid">
+                <div class="about-container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1>About</h1>
+                            <hr>
+                        </div>
+                        <div class="col-12">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, laborum? Neque iusto non nostrum tempora corrupti impedit nihil placeat dolorum exercitationem hic. Architecto quibusdam enim rerum, quisquam nemo rem doloribus?</p>
+                        </div>
+                        <div class="col-12">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis corporis doloremque quibusdam tenetur maxime, odio officia. Officia rem totam id inventore, molestias provident labore odio nihil harum ea facilis qui.</p>
+                        </div>
+                        <div class="col-12">
+                            <div class="download-btn">
+                                <a href="">Download</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
 
         </section>
 
