add footer and media query

--- a/index.html
+++ b/index.html
@@ -121,11 +121,54 @@
                     </div>
                 </div>
             </div>
-
+        </section>
+        <section class="contact ">
+            <div class="container-fluid">
+                <div class="tiltle text-center">
+                    <h1>Contact me</h1>
+                    <hr>
+                </div>
+                <div class="ms-container">
+                    <div class="row">
+                        <ul>
+                            <li>Name</li>
+                            <li>Email adress</li>
+                            <li>Phone Number</li>
+                            <li>Message <input type="text"></li>
+                        </ul>
+                        <div class="send-btn">
+                            <a href="">Send</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-12 col-md-4 ">
+                    <h1>location</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h1>Around the web</h1>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-google-plus-g"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin-in"></i>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h1>About freelancer</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+                <div class="copyright">
+                    <p>Copyright &copy; Your Website 2019</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
