adding details in header and jumbotron

--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-6 col-md-3">
-                    Start bootstrap
+                    <div class="text-uppercase">
+                        <a href="">Start bootstrap</a> 
+                    </div>
                 </div>
                 <div class="col-6 col-md-9">
                     <div class="menu-burger d-md-none text-end">
-                        <i class="fas fa-bars"></i>
+                        <a href=""><i class="fas fa-bars"></i></a>
                     </div>
                     <div class="menu-list d-none d-md-block text-end">
                         <ul>
-                            <li>Portfolio</li>
-                            <li>About</li>
-                            <li>Contact</li>
+                            <a href=""><li>Portfolio</li></a>
+                            <a href=""><li>About</li></a>
+                            <a href=""><li>Contact</li></a>
                         </ul>
                     </div>
                     
@@ -46,13 +48,17 @@
                         </div>
                    </div>
                    <div class="col-12">
-                       <h1>Title</h1>
+                       <h1 class="text-uppercase">Start bootstrap</h1>
                    </div>
                    <div class="col-12">
-                       <hr>
+                        <div class="star-divisor">
+                            <div class="ms_bar white"></div>
+                            <i class="fas fa-star"></i>
+                            <div class="ms_bar white"></div>
+                        </div>
                    </div>
                    <div class="col-12">
-                       <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
+                       <p class="text-uppercase">graphic artist - web designer - illustrator</p>
                    </div>
                </div> 
             </div>
@@ -62,7 +68,11 @@
                 <div class="row text-center">
                     <div class="col-12">
                         <h1>Portfolio</h1>
-                        <hr>
+                        <div class="star-divisor">
+                            <div class="ms_bar"></div>
+                            <i class="fas fa-star"></i>
+                            <div class="ms_bar"></div>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div class="img-wrapper">
@@ -164,7 +174,7 @@
                     <h1>About freelancer</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 </div>
-                <div class="copyright">
+                <div class="copyright container">
                     <p>Copyright &copy; Your Website 2019</p>
                 </div>
             </div>
