--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <!-- HEADER -->
     <header>
         <div class="container-fluid">
             <div class="row">
@@ -38,8 +39,10 @@
             </div>
         </div>
     </header>
+    <!-- HEADER -->
+    <!-- MAIN -->
     <main>
-        <section class="jumbotron">
+        <section class="jumbotron mb-5">
             <div class="container-fluid">
                <div class="row text-center">
                    <div class="col-12">
@@ -69,9 +72,9 @@
                     <div class="col-12">
                         <h1>Portfolio</h1>
                         <div class="star-divisor">
-                            <div class="ms_bar"></div>
+                            <div class="ms_bar black"></div>
                             <i class="fas fa-star"></i>
-                            <div class="ms_bar"></div>
+                            <div class="ms_bar black"></div>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
@@ -114,19 +117,23 @@
                 <div class="ms-container">
                     <div class="row">
                         <div class="col-12">
-                            <h1>About</h1>
-                            <hr>
+                            <h1 class="text-uppercase">About</h1>
+                            <div class="star-divisor">
+                                <div class="ms_bar white"></div>
+                                <i class="fas fa-star"></i>
+                                <div class="ms_bar white"></div>
+                            </div>
                         </div>
                         <div class="col-12 col-md-6">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, laborum? Neque iusto non nostrum tempora corrupti impedit nihil placeat dolorum exercitationem hic. Architecto quibusdam enim rerum, quisquam nemo rem doloribus?</p>
+                            <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, laborum? Neque iusto non nostrum tempora corrupti impedit nihil placeat dolorum exercitationem hic. Architecto quibusdam enim rerum, quisquam nemo rem doloribus?</p>
                         </div>
                         <div class="col-12 col-md-6">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis corporis doloremque quibusdam tenetur maxime, odio officia. Officia rem totam id inventore, molestias provident labore odio nihil harum ea facilis qui.</p>
+                            <p class="text-start">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis corporis doloremque quibusdam tenetur maxime, odio officia. Officia rem totam id inventore, molestias provident labore odio nihil harum ea facilis qui.</p>
                         </div>
                         <div class="col-12">
-                            <div class="download-btn">
-                                <a href="">Download</a>
-                            </div>
+                            <button type="button" class="btn ms_btn_download mb-5">
+                                <a href=""><i class="fas fa-download"></i> Download</a> 
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -154,8 +161,9 @@
             </div>
 
         </section>
-
     </main>
+    <!-- MAIN -->
+    <!-- FOOTER -->
     <footer>
         <div class="container">
             <div class="row text-center">
@@ -180,5 +188,6 @@
             </div>
         </div>
     </footer>
+    <!-- FOOTER -->
 </body>
 </html>
